feat: report crawler status in ping
